--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "m.usewidget"
         compileOptions {
@@ -10,7 +10,7 @@ android {
         }
         versionName '1.0'
         minSdkVersion 19
-        targetSdkVersion 24
+        targetSdkVersion 23
         versionCode 1
     }
     buildTypes {
@@ -28,4 +28,5 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:appcompat-v7:23.0.0'
 }
